# solid-calc

./: .gitignore  README.md  pyproject.toml
application/: cli.py  repl.py
application/services/: calculator_service.py
domain/: evaluator.py
domain/factory/: operation_factory.py
domain/operations/: addition.py  division.py  interface.py  multiplication.py  power.py  sqrt.py  substraction.py
domain/validation/: errors.py  validators.py
solid_calc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_factory_and_service.py  test_repl.py
ui/: app.py
