[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
exclude = ["^tests/"]

[project]
name = "solid-calc"
version = "0.1.0"
description = "Calculator with Strategy and Factory patterns"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
  {name = "superTay"}
]
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "domain",
  "domain.operations",
  "domain.validation",
  "domain.factory",
  "application",
  "application.services",
]

[project.scripts]
calc = "application.cli:main"
calc-repl = "application.repl:main"
